syntax = "proto3";

option go_package = "async-arch/task-tracker";
package schemas;

message Header{
  string application_id = 1;
  int64 timestamp = 2;
  string message_id = 3;
  string event_descriptor = 4;
}

message Task {
    string publicId = 1;
    string status = 2;
    string title = 3;
    string jiraId = 4;
    string description = 5;
    int64 created_at = 6;
    Header header = 7;
}
