syntax = "proto3";

package schemas;

message Data {
  int64 id = 1;
  string status = 2;
  string description = 3;
  int64 created_at = 4;
}

message Task {
    string event_name = 1;
    Data name = 2;
}
